Se modifico los estilos en el tamaño XS en @media

--- a/index.html
+++ b/index.html
@@ -96,20 +96,20 @@
                 </div>
                 <div id="collapseOne" class="preguntas__titulo__collapse" aria-labelledby="headingOne" data-parent="#accordionExample">
                     <div class="preguntas__titulo__collapse__div">
-                        <h4>PREGUNTAS FRECUNTES</h4>
-                        <h5>Que dias hacen los envios?</h5>
+                        <h4><strong> PREGUNTAS FRECUNTES</strong></h4>
+                        <h5><strong> Que dias hacen los envios?</strong></h5>
                         <p> Los envios ser realizan durante los dias viernes de 10 hrs a 16 hrs en Capital y de 16 hrs 21 hrs en Zona Norte </p>
-                        <h5>Cuanto es el pedido minimo que se tiene que hacer?</h5>
+                        <h5><strong>Cuanto es el pedido minimo que se tiene que hacer?</strong></h5>
                         <p>El pedido minimo es de 4 unidades, que equivale a una caja</p>
-                        <h5>Como son los medio de pago?</h5>
+                        <h5><strong> Como son los medio de pago?</strong></h5>
                         <p>Disponemos de los siguientes medios de pago:</p>
                         <p>En efectivo : Al momento de recibir el pedido.</p>
                         <p>Deposito o transferencia bancaria.</p>   
-                        <h5>Tiene menu sin TAG?</h5>
+                        <h5><strong> Tiene menu sin TAG?</strong></h5>
                         <p>Dentro de nuestro ampliio menus se encuentra marcado cual son sin TACC</p>
-                        <h5>Cuanto tiempo tengo que espera para sacarlo de la olla</h5>
+                        <h5><strong> Cuanto tiempo tengo que espera para sacarlo de la olla?</strong></h5>
                         <p>Aproximadamente 15 minutos cada plato viene con su instruccion en la bolasa de que tiempo se recomienda</p>
-                        <h5>Como se tiene que hacer para cocinarlo</h5>
+                        <h5><strong>Como se tiene que hacer para cocinarlo?</strong></h5>
                         <ol> 
                             <p id="p-especial">Para concinar los distintos productos se tiene que realizar lo siguiente:</p>
                             <li>Poner agua sobre la olla.</li>
