Se modifico el titulo de nosotros QUIENES por Quien

--- a/nosotros.html
+++ b/nosotros.html
@@ -87,7 +87,7 @@
             </div>
             <div class="sectionN__article__div-texto-n">
                 <h1 class="sectionN__article__div-texto-n__h1">
-                    QUIEN SOMOS
+                    QUIENES SOMOS
                 </h1>
                 <h2 class="sectionN__article__div-texto-n__h2">
                     Comida al vacio en solo 15 minutos
